<resources>
    <string name="app_name">SoftWords</string>
    <string name="navigation_generate_title">Generator</string>
    <string name="navigation_history_title">History</string>
    <string name="history_title">Sentence Generation History</string>
    <string name="history_icon">History Icon</string>
    <string name="generate_fragment_title">Random Sentence Generation</string>
    <string name="history_fragment_title">Generation History</string>
    <string name="generate_store_button_text">Save This Sentence</string>
    <string name="generate_generate_button_text">New Sentence</string>
    <string name="generate_store_snackbar_text_success">Sentence stored successfully!</string>
    <string name="generate_store_snackbar_text_failure">Error storing sentence</string>
    <string name="retry">Retry</string>
    <string name="generate_sentence_error">Something went wrong generating a new sentence!</string>
    <string name="cancel">Cancel</string>
    <string name="settings_new_noun">Find a new noun</string>
    <string name="settings_new_verb">Find a new verb</string>
    <string name="settings_new_preposition">Find a new preposition</string>
    <string name="settings">Settings</string>
    <string name="added_new_word">Successfully added a new %s to the database!</string>
    <string name="error_adding_word">An error occurred adding a new word to the database!</string>
    <string name="app_settings">App Settings</string>
    <string name="snackbar_deleted_sentence">Successfully deleted sentence!</string>
    <string name="snackbar_delete_sentence_failed">Failed to delete sentence, please try again!</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="navigation_history_detail_label">History Item Detail</string>
    <string name="error_loading_sentence_message">An error occurred loading the sentence from the database</string>
    <string name="sharing_sentence_failed">Sorry! Something prevented sharing this sentence!</string>
</resources>
