<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_graph"
    app:startDestination="@id/navigation_generate">

    <fragment
        android:id="@+id/navigation_generate"
        android:name="jibreelpowell.com.softwords.generate.GenerateFragment"
        android:label="@string/generate_fragment_title"
        tools:layout="@layout/fragment_generate" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="jibreelpowell.com.softwords.history.HistoryFragment"
        android:label="@string/history_fragment_title"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="jibreelpowell.com.softwords.settings.SettingsFragment"
        android:label="@string/app_settings"
        tools:layout="@layout/fragment_settings"
        />
</navigation>