<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context='.generate.GenerateFragment'>

    <data>

        <variable
            name="viewModel"
            type="jibreelpowell.com.softwords.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/settings_fragment_button_new_noun"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_medium_16"
            android:text="@string/settings_new_noun"
            android:onClick="@{() -> viewModel.addNewNoun()}"
            app:layout_constraintBottom_toTopOf="@id/settings_fragment_button_new_verb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <Button
            android:id="@+id/settings_fragment_button_new_verb"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            android:onClick="@{() -> viewModel.addNewVerb()}"
            android:padding="@dimen/spacing_medium_16"
            android:text="@string/settings_new_verb"
            app:layout_constraintBottom_toTopOf="@id/settings_fragment_button_new_preposition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_fragment_button_new_noun" />

        <Button
            android:id="@+id/settings_fragment_button_new_preposition"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            android:onClick="@{() -> viewModel.addNewPreposition()}"
            android:padding="@dimen/spacing_medium_16"
            android:text="@string/settings_new_preposition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_fragment_button_new_verb" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
